working in phase 1, session 6
